--- a/backend/package.json
+++ b/backend/package.json
@@ -7,15 +7,17 @@
     "tsc": "tsc",
     "ts-node": "ts-node",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node app.js",
-    "dev": "ts-node-dev index.ts",
+    "start": "ts-node ./src/index.ts",
+    "dev": "ts-node-dev ./src/index.ts",
     "lint": "eslint --ext .ts ."
   },
   "author": "Sisu Vepsäläinen",
   "license": "MIT",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
