--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.7.1",
     "graceful-fs": "^4.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
