extended default express Request interface with decoded token

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,6 +9,13 @@
     "noImplicitAny": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "resolveJsonModule": true
-  }
+    "resolveJsonModule": true,
+    "typeRoots": [
+      "./src/types",
+      "./node_modules/@types"
+    ]
+  },
+  "include": [
+    "./src/types/**/*.d.ts"
+  ]
 }
