--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,6 +16,8 @@
     ]
   },
   "include": [
-    "./src/types/**/*.d.ts"
+    "./src/types/**/*.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx"
   ]
 }
