--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "graceful-fs": "^4.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.5",
