--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/i18next": "^13.0.0",
+    "@types/react-i18next": "^8.1.0",
     "axios": "^1.7.1",
     "graceful-fs": "^4.2.11",
+    "i18next": "^23.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-i18next": "^15.0.1",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0"
   },
