--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "moduleNameMapper": {
       "^.+\\.svg$": "jest-svg-transformer",
       "^.+\\.(css|less|scss)$": "identity-obj-proxy"
-    }
+    },
+    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.ts"]
   }
 }
