--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "tsc": "tsc",
     "ts-node": "ts-node",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node ./src/index.ts",
-    "dev": "ts-node-dev ./src/index.ts",
+    "start": "cross-env NODE_ENV=production ts-node ./src/index.ts",
+    "dev": "cross-env NODE_ENV=development ts-node-dev ./src/index.ts",
+    "test": "cross-env NODE_ENV=test ts-node ./src/index.ts",
     "lint": "eslint --ext .ts ."
   },
   "author": "Sisu Vepsäläinen",
@@ -33,6 +33,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
