--- a/.github/workflows/deployment-pipeline.yml
+++ b/.github/workflows/deployment-pipeline.yml
@@ -62,7 +62,7 @@ jobs:
         run: |
           cd backend
           npm install
-          npm run start &
+          npm run test &
 
       - name: e2e tests
         uses: cypress-io/github-action@v5
