--- a/.github/workflows/deployment-pipeline.yml
+++ b/.github/workflows/deployment-pipeline.yml
@@ -62,7 +62,10 @@ jobs:
         run: |
           cd backend
           npm install
-          npm run start &
+          npm run test &
+
+      - name: Wait for server to be ready
+        run: npm wait-on 'http://localhost:3003'
 
       - name: e2e tests
         uses: cypress-io/github-action@v5
