--- a/.github/workflows/deployment-pipeline.yml
+++ b/.github/workflows/deployment-pipeline.yml
@@ -68,5 +68,5 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           working-directory: frontend
-          command: npm run cypress:run
+          command: npm run cy:run
           wait-on: 'http://127.0.0.1:3003'
