--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "tsc": "tsc",
     "ts-node": "ts-node",
-    "start": "cross-env NODE_ENV=production ts-node ./src/index.ts",
+    "start": "ts-node ./src/index.ts",
     "dev": "cross-env NODE_ENV=development ts-node-dev ./src/index.ts",
     "test": "cross-env NODE_ENV=test ts-node ./src/index.ts",
     "lint": "eslint --ext .ts ."
