--- a/.github/workflows/deployment-pipeline.yml
+++ b/.github/workflows/deployment-pipeline.yml
@@ -69,3 +69,17 @@ jobs:
         with:
           working-directory: frontend
           command: npm run cy:run
+  deployment_pipeline:
+      needs: [backend_pipeline, frontend_pipeline]
+      runs-on: ubuntu-22.04
+      timeout-minutes: 5
+      steps:
+      -   uses: actions/checkout@v4
+      -   uses: actions/setup-node@v4
+          with:
+            node-version: '20'
+      - name: Trigger deployment
+        env:
+            COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+        if: ${{ github.event_name == 'push' && !contains(join(env.COMMIT_MESSAGES), 'skip') }}
+        run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
